# discord-gcpai-bot

./: Dockerfile  README.md  pyproject.toml  skaffold.yaml
app/: commands.py  main.py
app/helpers/: common_func.py  gcp_ai.py  gcp_storage.py  gcp_vertexai_rag.py  prompts.py  pycordapi.py
app/utils/: matching_engine.py  matching_engine_utils.py
deploy/common/: config.yaml  deployment.yaml  serviceaccount.yaml
